// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home "" Render home page with correct buttons depending on user roles 1`] = `
<DocumentFragment>
  <div
    class="home"
  >
    <div
      class="af-title-bar"
    >
      <div
        class="container af-title-bar__wrapper"
      >
        <h1
          class="af-title-bar__title"
        >
          Accueil
        </h1>
      </div>
    </div>
    <div
      class="home__links-container"
    >
      <p>
        No role is associated to your profile.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home "ECOTAG_ANNOTATEUR" Render home page with correct buttons depending on user roles 1`] = `
<DocumentFragment>
  <div
    class="home"
  >
    <div
      class="af-title-bar"
    >
      <div
        class="container af-title-bar__wrapper"
      >
        <h1
          class="af-title-bar__title"
        >
          Accueil
        </h1>
      </div>
    </div>
    <div
      class="home__links-container"
    >
      <a
        class="home__link"
        href="/projects"
      >
        <div
          class="home__link-container home__link-container--projects"
        >
          Projects
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home "ECOTAG_DATA_SCIENTIST,ECOTAG_ANNOTATEUR" Render home page with correct buttons depending on user roles 1`] = `
<DocumentFragment>
  <div
    class="home"
  >
    <div
      class="af-title-bar"
    >
      <div
        class="container af-title-bar__wrapper"
      >
        <h1
          class="af-title-bar__title"
        >
          Accueil
        </h1>
      </div>
    </div>
    <div
      class="home__links-container"
    >
      <a
        class="home__link"
        href="/projects"
      >
        <div
          class="home__link-container home__link-container--projects"
        >
          Projects
        </div>
      </a>
      <a
        class="home__link"
        href="/datasets"
      >
        <div
          class="home__link-container home__link-container--datasets"
        >
          Datasets
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home "ECOTAG_DATA_SCIENTIST,ECOTAG_ANNOTATEUR,ECOTAG_ADMINISTRATEUR" Render home page with correct buttons depending on user roles 1`] = `
<DocumentFragment>
  <div
    class="home"
  >
    <div
      class="af-title-bar"
    >
      <div
        class="container af-title-bar__wrapper"
      >
        <h1
          class="af-title-bar__title"
        >
          Accueil
        </h1>
      </div>
    </div>
    <div
      class="home__links-container"
    >
      <a
        class="home__link"
        href="/projects"
      >
        <div
          class="home__link-container home__link-container--projects"
        >
          Projects
        </div>
      </a>
      <a
        class="home__link"
        href="/datasets"
      >
        <div
          class="home__link-container home__link-container--datasets"
        >
          Datasets
        </div>
      </a>
      <a
        class="home__link"
        href="/teams"
      >
        <div
          class="home__link-container home__link-container--groups"
        >
          Groups
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home translation Renders component with english translation 1`] = `
<DocumentFragment>
  <div
    class="home"
  >
    <div
      class="af-title-bar"
    >
      <div
        class="container af-title-bar__wrapper"
      >
        <h1
          class="af-title-bar__title"
        >
          Accueil
        </h1>
      </div>
    </div>
    <div
      class="home__links-container"
    >
      <a
        class="home__link"
        href="/projects"
      >
        <div
          class="home__link-container home__link-container--projects"
        >
          Projects
        </div>
      </a>
      <a
        class="home__link"
        href="/datasets"
      >
        <div
          class="home__link-container home__link-container--datasets"
        >
          Datasets
        </div>
      </a>
      <a
        class="home__link"
        href="/teams"
      >
        <div
          class="home__link-container home__link-container--groups"
        >
          Groups
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home translation Renders component with french translation 1`] = `
<DocumentFragment>
  <div
    class="home"
  >
    <div
      class="af-title-bar"
    >
      <div
        class="container af-title-bar__wrapper"
      >
        <h1
          class="af-title-bar__title"
        >
          Accueil
        </h1>
      </div>
    </div>
    <div
      class="home__links-container"
    >
      <a
        class="home__link"
        href="/projects"
      >
        <div
          class="home__link-container home__link-container--projects"
        >
          Projets
        </div>
      </a>
      <a
        class="home__link"
        href="/datasets"
      >
        <div
          class="home__link-container home__link-container--datasets"
        >
          Datasets
        </div>
      </a>
      <a
        class="home__link"
        href="/teams"
      >
        <div
          class="home__link-container home__link-container--groups"
        >
          Groupes
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
